syntax = "proto3";
package tasks;

option go_package = "pkg/proto/tasks";

import "google/protobuf/timestamp.proto";

// Task represents a reporting task for a completed appointment
message Task {
    string id = 1; // UUID
    uint32 appointment_id = 2;
    uint32 assigned_to = 3;
    uint32 assigned_by = 4;
    string stage = 5; // pending, in_progress, completed, archived
    string priority = 6; // low, medium, high, urgent
    string title = 7; // Encrypted
    string description = 8; // Encrypted
    google.protobuf.Timestamp due_date = 9;
    google.protobuf.Timestamp deadline = 10;
    google.protobuf.Timestamp completed_at = 11;
    google.protobuf.Timestamp archived_at = 12;
    bool is_archived = 13;
    google.protobuf.Timestamp created_at = 14;
    google.protobuf.Timestamp updated_at = 15;
}

// TaskComment represents a comment on a task
message TaskComment {
    string id = 1; // UUID
    string task_id = 2; // UUID
    uint32 user_id = 3;
    string comment_text = 4; // Encrypted
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// TaskAttachment represents a file attached to a task
message TaskAttachment {
    string id = 1; // UUID
    string task_id = 2; // UUID
    uint32 uploaded_by = 3;
    string file_name = 4;
    string file_key = 5; // Encrypted S3 key
    int64 file_size = 6;
    string mime_type = 7;
    google.protobuf.Timestamp created_at = 8;
}

// TaskHistory represents an audit trail entry
message TaskHistory {
    string id = 1; // UUID
    string task_id = 2; // UUID
    uint32 changed_by = 3;
    string action = 4; // created, assigned, reassigned, stage_changed, completed, archived
    string field_changed = 5; // assigned_to, stage, due_date, etc.
    string old_value = 6;
    string new_value = 7;
    string reason = 8;
    google.protobuf.Timestamp created_at = 9;
}

// Notification events

// TaskNotification - Emitted when a notification needs to be sent
message TaskNotification {
    string task_id = 1;
    uint32 user_id = 2;
    string notification_type = 3; // task_assigned, task_reassigned, deadline_approaching, deadline_exceeded, comment_added, attachment_uploaded, task_completed
    string subject = 4;
    string message = 5;
    
    // Task context
    uint32 appointment_id = 6;
    string patient_name = 7;
    string modality = 8;
    string procedure = 9;
    google.protobuf.Timestamp due_date = 10;
    google.protobuf.Timestamp deadline = 11;
    string priority = 12;
    
    // Time-based fields (optional, depending on notification type)
    int32 hours_until_due = 13;
    int32 days_overdue = 14;
    
    // Notification delivery preferences
    bool send_email = 15;
    bool send_in_app = 16;
    string email_address = 17;
}


// DailySummary - Emitted for daily morning summaries
message DailySummary {
    uint32 user_id = 1;
    int32 total_incomplete = 2;
    int32 urgent_count = 3;
    int32 high_count = 4;
    int32 medium_count = 5;
    int32 low_count = 6;
    int32 due_today_count = 7;
    int32 overdue_count = 8;
    string breakdown = 9; // Formatted breakdown string
    string subject = 10;
    string message = 11;
    
    // Notification delivery preferences
    bool send_email = 12;
    bool send_in_app = 13;
    string email_address = 14;
    google.protobuf.Timestamp summary_date = 15;
}

message TaskSummaryItem {
    string task_id = 1; // UUID
    uint32 appointment_id = 2;
    string patient_name = 3;
    string modality = 4;
    string priority = 5;
    google.protobuf.Timestamp due_date = 6;
    string stage = 7;
}

// TaskEscalation - Emitted when task is 3+ days overdue
message TaskEscalation {
    string task_id = 1;
    uint32 admin_id = 2;
    uint32 appointment_id = 3;
    string patient_name = 4;
    string modality = 5;
    string assigned_to = 6; // Name of person task is assigned to
    int32 days_overdue = 7;
    string priority = 8;
    google.protobuf.Timestamp deadline = 9;
    string subject = 10;
    string message = 11;
    
    // Notification delivery preferences
    bool send_email = 12;
    bool send_in_app = 13;
    string email_address = 14;
}

// InAppNotification - Structure for in-app notification inbox
message InAppNotification {
    string id = 1; // UUID
    uint32 user_id = 2;
    string task_id = 3; // UUID (nullable)
    string notification_type = 4;
    string title = 5;
    string message = 6;
    bool is_read = 7;
    google.protobuf.Timestamp read_at = 8;
    google.protobuf.Timestamp created_at = 9;
}